--- a/frontend/adminPage.html
+++ b/frontend/adminPage.html
@@ -8,105 +8,340 @@
     <script type="module" src="component/IssueTab.js"></script>
     <link href="dist/css/index.css" rel="stylesheet">
     <style>
-        #issueList::-webkit-scrollbar {
-            width: 0.4rem;
+        .selectedTag {
+            line-height: 2.6rem;
+            font-weight: 600;
+            border-radius: 1.3rem;
+            color: #3ca0e6;
+            background-color: #ebf6fd;
+            text-align: center;
+            width: 10rem;
+            margin-right: 2rem;
         }
 
-        #issueList::-webkit-scrollbar-track {
-            border-radius: 0.6rem;
-            background: rgba(0, 0, 0, 0.06);
-            -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.08);
+        .normalTag {
+            line-height: 2.6rem;
+            border-radius: 1.3rem;
+            text-align: center;
+            width: 10rem;
+            margin-right: 2rem;
         }
 
-        #issueList::-webkit-scrollbar-thumb {
-            border-radius: 0.6rem;
-            background: rgba(0, 0, 0, 0.12);
-            -webkit-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.2);
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 1rem;
+        }
+
+        tr {
+            width: 100%;
+        }
+
+        th, td {
+            border: 1px solid black;
+            padding: 8px;
+            text-align: left;
+        }
+
+        td {
+            white-space: pre-wrap;
+            word-wrap: break-word;
+            word-break: break-all;
+        }
+
+        td img {
+            width: 70%;
+        }
+
+        .left-column {
+            width: 30%;
+        }
+
+        .right-column {
+            word-wrap: break-word;
+            color: #494e52;
         }
     </style>
 </head>
-<body style="display: flex;flex-direction: row;height: 100vh;margin: 0;">
-<div style="display: flex;margin: 1rem;width: 100%">
-    <div style="flex: 1;border: 1px solid rgba(0,0,0,0.1);border-radius: 0.5rem;height: max-content;">
-        <div style="display: flex;padding: 0.5rem 1rem;align-items: center;">
-            <img src="media/filter.svg">
-            <div style="font-weight: bold;margin-left: 0.2rem;">FILTERS</div>
+<body style="margin: 0;">
+<div style="display: flex;justify-content: center;align-items: center;height: 8rem;">
+    <img style="text-align: center;height: 4rem;" src="media/gosim-logo.svg"/>
+</div>
+<div style="display: flex;flex-direction: column;justify-content: space-around;height: 6rem;margin:0 2rem;">
+    <div style="display:flex;font-size: 1.3rem;">
+        <div id="totalTag" onclick="changeTag(0)" class="selectedTag clickButton">Total(<span id="Total">0</span>)
         </div>
-        <hr/>
-        <div style="display: flex;justify-content: space-between;align-items: center;padding: 0.5rem 1rem;">
-            <div>Budget</div>
-            <img src="media/up.svg">
+        <div id="approvedTag" onclick="changeTag(1)" class="normalTag clickButton">Approved(<span
+                id="Approved">0</span>)
         </div>
-        <div style="display: flex;flex-wrap: wrap;justify-content: space-between;padding: 0.5rem 1rem;">
-            <div style="display:flex;flex-wrap: nowrap;margin-right: 0.5rem;flex:1;">
-                <input id="0" type="checkbox"/>
-                <div style="white-space:nowrap;">0-200</div>
-            </div>
-            <div style="display:flex;flex-wrap: nowrap;margin-right: 0.5rem;flex:1;">
-                <input id="200" type="checkbox"/>
-                <div style="white-space:nowrap;">200-400</div>
-            </div>
-            <div style="display:flex;flex-wrap: nowrap;margin-right: 0.5rem;flex:1;">
-                <input id="400" type="checkbox"/>
-                <div style="white-space:nowrap;">400-500</div>
-            </div>
-            <div style="display:flex;flex-wrap: nowrap;margin-right: 0.5rem;flex:1;">
-                <input id="500" type="checkbox"/>
-                <div style="white-space:nowrap;">Above 500</div>
+        <div id="rejectedTag" onclick="changeTag(2)" class="normalTag clickButton">Rejected(<span id="Rejected">0</span>)
+        </div>
+        <div id="queueTag" onclick="changeTag(3)" class="normalTag clickButton">Queue(<span id="Queue">0</span>)
+        </div>
+    </div>
+    <div style="font-size: 0.9rem;color: #7e878d;">Total budget / approved budget: $<span id="totalBudget">0</span> /
+        $<span id="totalApprovedBudget">0</span></div>
+</div>
+<div id="list">
+    <div style="display: flex;flex-direction: row;height: calc(100vh - 17rem);margin:1rem 1.5rem 0;">
+        <div  onscroll="scrollHandler(this)" class="beautifulScrollBar" id="issuesList"
+             style="flex: 3;padding: 0 0.5rem;overflow-y: auto; width: 100%;"></div>
+    </div>
+</div>
+<div id="detail" style="margin: 0 2rem 1rem;display: none;">
+    <div onclick="clickBackToList()" class="clickText"
+         style="cursor: pointer;font-size: 2rem;text-align: end;color: #9046ff;">Go back to the list
+    </div>
+    <table>
+        <tr style="background-color: #f0f4f6;">
+            <th class="left-column">Organization name</th>
+            <td id="orgName" class="right-column"></td>
+        </tr>
+        <tr>
+            <th class="left-column">Project title</th>
+            <td id="title" class="right-column"></td>
+        </tr>
+        <tr>
+            <th class="left-column">Project description</th>
+            <td id="desc" class="right-column"></td>
+        </tr>
+        <tr>
+            <th class="left-column">Budget</th>
+            <td id="budget" class="right-column"></td>
+        </tr>
+        <tr>
+            <th class="left-column">project language</th>
+            <td id="language" class="right-column"></td>
+        </tr>
+        <tr>
+            <th class="left-column">GitHub repo</th>
+            <td id="repo" class="right-column"></td>
+        </tr>
+        <tr>
+            <th class="left-column">GitHub issue URL</th>
+            <td id="issuesUrl" class="right-column"></td>
+        </tr>
+        <tr>
+            <th class="left-column">Assignee</th>
+            <td id="assignee" class="right-column"></td>
+        </tr>
+        <tr>
+            <th class="left-column">approved budget</th>
+            <td id="projectApprovedBudget" class="right-column"></td>
+        </tr>
+        <tr>
+            <th class="left-column">Review status</th>
+            <td id="reviewStatus" class="right-column"></td>
+        </tr>
+        <tr>
+            <th class="left-column">Linked PR</th>
+            <td id="linkedPR" class="right-column"></td>
+        </tr>
+        <tr>
+            <th class="left-column">Comments</th>
+            <td id="comments" class="right-column"></td>
+        </tr>
+    </table>
+    <div style="display: flex;margin-top: 1.5rem;">
+        <div style="display: flex;justify-content: center;flex:1;">
+            <div id="decline" class="clickButton"
+                 style="max-width: max-content;padding: 0.5rem 1rem;color: white;background-color: #9046ff;border-radius: 0.3rem;">
+                Decline
             </div>
         </div>
-        <hr/>
-        <div style="display: flex;justify-content: space-between;align-items: center;padding: 0.5rem 1rem;">
-            <div>Skill</div>
-            <img src="media/up.svg">
-        </div>
-        <div style="display: flex;flex-wrap: wrap;justify-content: space-between;padding: 0.5rem 1rem;">
-            <div style="display:flex;flex-wrap: nowrap;margin-right: 0.5rem;flex:1;">
-                <input id="Rust" type="checkbox"/>
-                <div style="white-space:nowrap;">Rust</div>
-            </div>
-            <div style="display:flex;flex-wrap: nowrap;margin-right: 0.5rem;flex:1;">
-                <input id="C" type="checkbox"/>
-                <div style="white-space:nowrap;">C</div>
-            </div>
-            <div style="display:flex;flex-wrap: nowrap;margin-right: 0.5rem;flex:1;">
-                <input id="C++" type="checkbox"/>
-                <div style="white-space:nowrap;">C++</div>
-            </div>
-            <div style="display:flex;flex-wrap: nowrap;margin-right: 0.5rem;flex:1;">
-                <input id="Javascript" type="checkbox"/>
-                <div style="white-space:nowrap;">Javascript</div>
-            </div>
-        </div>
-        <hr/>
-        <div style="display: flex;justify-content: right;padding: 0.5rem 1rem 1.2rem;">
-            <div style="padding: 0.5rem 1rem;color: white;background-color: #9046ff;border-radius: 0.3rem;">
-                Apply
+        <div style="display: flex;justify-content: center;flex: 1;">
+            <input type="number" min="0" id="budgetInput"
+                   style="border: 1px solid #bdc5cb;border-radius: 0.3rem;padding: 0.5rem;width: 4rem;"/>
+            <div id="approve" class="clickButton"
+                 style="padding: 0.5rem 1rem;color: white;background-color: #9046ff;border-radius: 0.3rem;margin-left: 1rem;">
+                Approve
             </div>
         </div>
     </div>
-    <div id="issueList" style="flex: 3;margin-left: 2rem;padding-right: 0.5rem;overflow-y: auto;max-height: 100%;">
+</div>
+<div id="alert"
+     style="display: none;background-color: white;position: absolute;top: 50%;left: 50%;transform: translate(-50%, -50%);border-radius: 1rem;padding:2rem;box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);border: 1px solid #7e878d;">
+    <div>You have unsaved input, back to the list will lose it~</div>
+    <div style="display: flex;justify-content: space-around;margin-top: 1rem;">
+        <div onclick="goList()" class="clickButton"
+             style="padding: 0.5rem 1rem;background-color: white;color: #9046ff;border:1px solid #9046ff;border-radius: 0.3rem;">
+            Still back
+        </div>
+        <div onclick="closeAlert()" class="clickButton"
+             style="padding: 0.5rem 1rem;color: white;background-color: #9046ff;border:1px solid #9046ff;border-radius: 0.3rem;">
+            Stay here
+        </div>
     </div>
 </div>
 <script>
     let page = 1;
     let page_size = 10;
-    const issueList = document.getElementById('issueList');
-    fetch(`https://code.flows.network/webhook/5xAx1Yru2BqZ9PUacb3q/projects?page=${page}&page_size=${page_size}&list_by=issues_count`).then(data => {
+
+    let issuesList = []
+    const issuesListPlace = document.getElementById('issuesList');
+    const listPlace = document.getElementById('list');
+    const alertPlace = document.getElementById('alert');
+    const detailPlace = document.getElementById('detail');
+
+    const totalTag = document.getElementById('totalTag');
+    const approvedTag = document.getElementById('approvedTag');
+    const rejectedTag = document.getElementById('rejectedTag');
+    const queueTag = document.getElementById('queueTag');
+    const total = document.getElementById('Total');
+    const approved = document.getElementById('Approved');
+    const rejected = document.getElementById('Rejected');
+    const queue = document.getElementById('Queue');
+    const totalBudget = document.getElementById('totalBudget');
+    const totalApprovedBudget = document.getElementById('totalApprovedBudget');
+
+    const orgName = document.getElementById('orgName');
+    const title = document.getElementById('title');
+    const desc = document.getElementById('desc');
+    const budget = document.getElementById('budget');
+    const language = document.getElementById('language');
+    const repo = document.getElementById('repo');
+    const issuesUrl = document.getElementById('issuesUrl');
+    const assignee = document.getElementById('assignee');
+    const projectApprovedBudget = document.getElementById('projectApprovedBudget');
+    const reviewStatus = document.getElementById('reviewStatus');
+    const linkedPR = document.getElementById('linkedPR');
+    const comments = document.getElementById('comments');
+    const budgetInput = document.getElementById('budgetInput');
+    const approveButton = document.getElementById('approve');
+    const declineButton = document.getElementById('decline');
+
+    function scrollHandler(e) {
+        if (e.scrollHeight - e.scrollTop - 1 < e.clientHeight && !queryStatus) {
+            page += 1
+            requestData();
+        }
+    }
+
+    fetch(`/_api/getIssuesList?page=${page}&page_size=${page_size}`, {
+        method: 'POST',
+        headers: {"Content-Type": "application/json"},
+        body: JSON.stringify({
+            "filter_strs": ["issue_budget_approved", "main_language", "repo_stars", "issue_budget", "issue_creator"],
+            "review_status": "approve"
+        })
+    }).then(data => {
         return data.json();
     }).then(list => {
-        list.forEach(item => {
-            const comp = document.createElement('issue-component');
-            comp.img = "media/dog.jpg";
-            comp.name = item.issue_title;
-            comp.desc = item.issue_description;
-            comp.type = item.type;
-            comp.budget = item.issue_budget;
-            comp.link = item.issue_id;
-            console.log(comp)
-            issueList.appendChild(comp);
-        })
+        if (list && Array.isArray(list)) {
+            const issuesStats = list[0].issue_stats
+            total.innerText = issuesStats[0];
+            approved.innerText = issuesStats[1];
+            rejected.innerText = issuesStats[2];
+            queue.innerText = issuesStats[3];
+            const runningBudget = list[0].running_budget
+            totalBudget.innerText = runningBudget[0]
+            totalApprovedBudget.innerText = runningBudget[2]
+            issuesList = [...issuesList, ...list]
+            list.forEach(item => {
+                const comp = document.createElement('issue-component');
+                comp.id = item.issue_id;
+                comp.img = item.project_logo;
+                comp.name = item.issue_title;
+                comp.desc = item.issue_description;
+                comp.budget = item.issue_budget;
+                comp.type = "admin";
+                comp.link = item.issue_id;
+                issuesListPlace.appendChild(comp);
+            })
+        }
     })
+
+    function clickBackToList() {
+        if (budgetInput.value) {
+            alertPlace.style.display = "block";
+        } else {
+            goList()
+        }
+    }
+
+    function goList() {
+        alertPlace.style.display = "none";
+        listPlace.style.display = "block";
+        detailPlace.style.display = "none";
+    }
+
+    function goDetail(issueId) {
+        const thisIssue = issuesList.find(issues => issues.issue_id === issueId);
+        const urlSplit = thisIssue.issue_id.split("/");
+        budgetInput.max = thisIssue.total_budget_allocated;
+        budgetInput.addEventListener("keydown", (event) => {
+            const num = parseInt(event.target.value + event.key)
+            if (typeof num === 'number') {
+                if (num > thisIssue.total_budget_allocated) {
+                    budgetInput.value = thisIssue.total_budget_allocated
+                    event.preventDefault();
+                    return false;
+                } else {
+                    budgetInput.value = event.target.value
+                }
+            } else {
+                event.preventDefault();
+                return false;
+            }
+        })
+        orgName.innerText = urlSplit[urlSplit.length - 2];
+        title.innerText = "!!!";
+        desc.innerHTML = thisIssue.project_description.replace("./", "https://raw.githubusercontent.com/" + urlSplit.slice(-2).join("/") + "/master/");
+        budget.innerText = thisIssue.total_budget_allocated;
+        language.innerText = thisIssue.main_language;
+        repo.innerHTML = `<a href="${thisIssue.project_id}" target="_blank">${urlSplit[urlSplit.length - 1]}</a>`;
+        issuesUrl.innerHTML = thisIssue.issues_list.map((item, index) => {
+            return `<a href="${item}" target="_blank">${item}</a>` + (index + 1 < thisIssue.issues_list.length ? `<br/>` : "")
+        });
+        assignee.innerText = "!!!";
+        projectApprovedBudget.innerText = "!!!";
+        reviewStatus.innerText = "!!!";
+        linkedPR.innerHTML = "";
+        comments.innerText = "!!!";
+        listPlace.style.display = "none";
+        detailPlace.style.display = "block";
+    }
+
+    function closeAlert() {
+        alertPlace.style.display = "none";
+    }
+
+    function changeTag(num) {
+        switch (num) {
+            case 0:
+                totalTag.className = "selectedTag clickButton"
+                approvedTag.className = "normalTag clickButton"
+                rejectedTag.className = "normalTag clickButton"
+                queueTag.className = "normalTag clickButton"
+                break;
+            case 1:
+                totalTag.className = "normalTag clickButton"
+                approvedTag.className = "selectedTag clickButton"
+                rejectedTag.className = "normalTag clickButton"
+                queueTag.className = "normalTag clickButton"
+                break;
+            case 2:
+                totalTag.className = "normalTag clickButton"
+                approvedTag.className = "normalTag clickButton"
+                rejectedTag.className = "selectedTag clickButton"
+                queueTag.className = "normalTag clickButton"
+                break;
+            case 3:
+                totalTag.className = "normalTag clickButton"
+                approvedTag.className = "normalTag clickButton"
+                rejectedTag.className = "normalTag clickButton"
+                queueTag.className = "selectedTag clickButton"
+                break;
+        }
+    }
+
+    function approve() {
+
+    }
+
+    function decline() {
+
+    }
 </script>
 </body>
 </html>
