--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,299 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+    <title>GOSIM 2024</title>
+    <link href="dist/css/index.css" rel="stylesheet">
+    <script type="module" src="component/NoticeTab.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        .desktopShow {
+            display: block;
+        }
 
+        .selected {
+            color: #379AE6;
+            font-weight: 600;
+            background-color: rgb(241, 248, 253);
+        }
+
+        @media (max-width: 850px) {
+            .desktopShow {
+                display: none;
+            }
+        }
+
+        .notice {
+            width: 100%;
+        }
+
+        @media (max-width: 850px) {
+            .notice {
+                width: 70%;
+            }
+        }
+    </style>
+</head>
+<body style="margin: 0;">
+<div style="display: flex;align-items: center;justify-content: space-between;margin: 0 2rem; line-height: 4rem;">
+    <img style="height: 2rem;" src="media/gosim-logo.svg"/>
+    <div style="display: flex;justify-content: space-around;align-items: center;">
+        <div style="cursor: pointer;padding: 0 0.2rem;margin: 0 0.8rem;">Rules</div>
+        <div style="cursor: pointer;padding: 0 0.2rem;margin: 0 0.8rem;">Timeline</div>
+        <div onclick="window.open('/2024Participants')" style="cursor: pointer;padding: 0 0.2rem;margin: 0 0.8rem;">2024
+            participants
+        </div>
+        <div style="cursor: pointer;padding: 0 0.2rem;margin: 0 0.8rem;">FAQ</div>
+        <div class="clickButton"
+             style="cursor: pointer;height:1.5rem;line-height:1.5rem;margin-left: 3rem;padding: 0.5rem 1rem;color: white;background-color: #6688FF;border-radius: 0.3rem;">
+            Join us
+        </div>
+    </div>
+</div>
+<div style="display: flex;align-items: center;justify-content: space-around;margin: 2rem 0;">
+    <div style="flex: 1;"></div>
+    <div style="flex: 2;">
+        <div style="color: #6688FF;font-size: 2rem;margin-bottom: 0.3rem;font-weight: 600;">Contribute to open source
+        </div>
+        <div style="font-size: 2rem;margin-bottom: 0.3rem;font-weight: 600;">and get some rewards</div>
+        <div style="font-size: 0.8rem;line-height:1rem;color: #7e878d;">GOSIM Bounty project is to help open source
+            project
+        </div>
+        <div style="font-size: 0.8rem;line-height:1rem;color: #7e878d;">grow their open source community</div>
+        <div style="display: flex;align-items: center;margin-top: 1.8rem;">
+            <div class="clickButton"
+                 style="cursor: pointer;height:1.5rem;line-height:1.5rem;padding: 0.3rem 1rem;color: white;background-color: #6688FF;border-radius: 0.15rem;">
+                Join us now
+            </div>
+            <a style="padding-left: 1rem; color: #9046ff;cursor: pointer;" class="clickText">Learn more</a>
+        </div>
+        <div style="display: flex;align-items: end;margin-top: 1.6rem;">
+            <div style="font-size: 0.8rem;">Presented by</div>
+            <img style="height: 1.6rem;margin-left: 0.3rem;" src="media/gosim-logo.svg"/>
+        </div>
+    </div>
+    <div style="flex: 1;"></div>
+    <img style="flex: 2;max-height: 16rem;width: auto;" src="media/main.svg"/>
+    <div style="flex: 1;"></div>
+</div>
+<div style="display: flex;align-items: center;justify-content: space-around;background-color: #f5f1fe;padding: 1.5rem 0;">
+    <div style="flex: 1;"></div>
+    <div style="flex: 2;">
+        <div style="font-size: 1.8rem;margin-bottom: 0.3rem;font-weight: 600;">1,780 Open source tasks</div>
+        <div style="font-size: 0.8rem;line-height:1rem;color: #7e878d;">
+            Find your favourite open source projects to contribute.
+        </div>
+        <div style="display:flex;margin-top: 1.8rem;">
+            <div class="clickButton"
+                 style="cursor: pointer;height:1.5rem;line-height:1.5rem;padding: 0.3rem 1rem;color: white;background-color: #6688FF;border-radius: 0.15rem;">
+                Explore now
+            </div>
+        </div>
+    </div>
+    <div style="flex: 1;"></div>
+    <img style="flex: 2;max-height: 16rem;width: auto;" src="media/open-tasks.svg"/>
+    <div style="flex: 1;"></div>
+</div>
+<div style="display: flex;align-items: center;justify-content: space-around;margin: 2rem 0;color: #7e878d;">
+    <div style="flex: 1;"></div>
+    <div style="flex:2;">
+        <div style="color:#323743;font-size: 1.5rem;">Open source organization project</div>
+        <div style="margin-top: 2rem;">Create GitHub issues including what kind of code contribution do you nees. GOSIM
+            bounty project provides financial support for you project.
+        </div>
+        <div style="margin-bottom: 2rem;">At the end of program, remember to merge the related PR, which show us the
+            contribution is completed successfully.
+        </div>
+        <a style="color:#323743;cursor: pointer;text-decoration: underline;" class="clickText">Learn more</a>
+    </div>
+    <div style="flex: 1;"></div>
+    <div style="flex:2;">
+        <div style="color:#9046ff;font-size: 1.5rem;">Open source contributors</div>
+        <div style="margin-top: 2rem;">Work closely with an open source project, solving the GitHub issues.</div>
+        <div>Get some reward for you contribution to open source.</div>
+        <div>Learn new programming skills.</div>
+        <div style="margin-bottom: 2rem;">Add more experience to your resume.</div>
+        <a style="color:#323743;cursor: pointer;text-decoration: underline;" class="clickText">Learn more</a>
+    </div>
+    <div style="flex: 1;"></div>
+</div>
+<div style="font-size: 2.2rem;font-weight: 600;text-align: center;">Timeline</div>
+<div style="position: relative;margin-bottom: 4rem;">
+    <div style="display: flex;align-items: center;justify-content: center;">
+        <div class="desktopShow" style="flex: 1;"></div>
+        <div id="line"
+             style="position: absolute; top: 0;bottom: 0;left:50%;transform: translate(-50%, 0);height:100%;border: 1px dashed #7e878d;"></div>
+        <div id="left" style="flex: 2;display: flex;justify-content: end;position: relative;right: -0.85rem;">
+            <div style="max-width: max-content;">
+                <div style="display: flex;flex-direction: row-reverse;align-items: start;justify-content: space-between;">
+                    <div style="background-color: white;">
+                        <div style="background-color: #ceaeff;padding:0.45rem;border-radius: 50%;margin-top: 0.3rem;">
+                            <div style="background-color: #9046ff;border-radius: 50%;width:0.8rem;height: 0.8rem;"></div>
+                        </div>
+                    </div>
+                    <div style="margin-right: 1.5rem;">
+                        <div style="font-weight: 600;font-size: 1.7rem;color: #9046ff;">10th May - 31st May</div>
+                        <div style="font-weight: 600;color:#323743;font-size: 1.2rem;margin-top: 0.2rem;">Open source
+                            organization project
+                        </div>
+                        <div style="color: #7e878d;">
+                            <div>1. create an issues on your GitHub repo.</div>
+                            <div>including</div>
+                            <div>a. project description</div>
+                            <div>b. project skills</div>
+                            <div>c. expected project outcome</div>
+                            <div>d. expected budget</div>
+                            <div>2. Add `GOSIM` label to your GitHub issue</div>
+                        </div>
+                    </div>
+                </div>
+                <div style="display: flex;flex-direction: row-reverse;align-items: start;justify-content: space-between;margin-top: 4rem;">
+                    <div style="background-color: #ceaeff;padding:0.45rem;border-radius: 50%;margin-top: 0.3rem;">
+                        <div style="background-color: #9046ff;border-radius: 50%;width:0.8rem;height: 0.8rem;"></div>
+                    </div>
+                    <div style="margin-right: 1.5rem;">
+                        <div style="font-weight: 600;font-size: 1.7rem;color: #9046ff;">15th June</div>
+                        <div style="font-weight: 600;color:#323743;font-size: 1.2rem;margin-top: 0.2rem;">Announce 2024
+                            participants
+                        </div>
+                    </div>
+                </div>
+                <div style="display: flex;flex-direction: row-reverse;align-items: start;justify-content: right; margin-top: 8rem; height: 100%;">
+                    <div style="display: flex;flex-direction:column;background-color: white;height: 100%; margin-top: 0.3rem;">
+                        <div style="background-color: #ceaeff; padding: 0.45rem; border-radius: 50%;">
+                            <div style="background-color: #9046ff; border-radius: 50%; width: 0.8rem; height: 0.8rem;"></div>
+                        </div>
+                    </div>
+                    <div style="margin-right: 1.5rem;">
+                        <div style="font-weight: 600; font-size: 1.7rem; color: #9046ff;">26th Aug - 30th Aug</div>
+                        <div style="font-weight: 600; color: #323743; font-size: 1.2rem; margin-top: 0.2rem;">Reward
+                            sent
+                        </div>
+                        <div style="color: #7e878d;">
+                            <div>Send rewards to the qualified open source contributors.</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="right" style="flex: 2;position: relative;left: -0.85rem;">
+            <div style="display: flex;align-items: start;justify-content: left;">
+                <div style="background-color: #ceaeff;padding:0.45rem;border-radius: 50%;margin-top: 0.3rem;">
+                    <div style="background-color: #9046ff;border-radius: 50%;width:0.8rem;height: 0.8rem;"></div>
+                </div>
+                <div style="margin-left: 1.5rem;">
+                    <div style="font-weight: 600;font-size: 1.7rem;color: #9046ff;">1st June - 14th June</div>
+                    <div style="font-weight: 600;color:#323743;font-size: 1.2rem;margin-top: 0.2rem;">Review proposals
+                    </div>
+                    <div style="color: #7e878d;">
+                        <div>The GOSIM bounty project admin will review all the proposals and approve and approve some
+                            proposals with a certain amount of budget.
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div style="display: flex;align-items: start;justify-content: left;margin-top: 8rem;">
+                <div style="background-color: #ceaeff;padding:0.45rem;border-radius: 50%;margin-top: 0.3rem;">
+                    <div style="background-color: #9046ff;border-radius: 50%;width:0.8rem;height: 0.8rem;"></div>
+                </div>
+                <div style="margin-left: 1.5rem;">
+                    <div style="font-weight: 600;font-size: 1.7rem;color: #9046ff;">26th Aug - 30th Aug</div>
+                    <div style="font-weight: 600;color:rgba(50,55,67,0.5);font-size: 1.2rem;margin-top: 0.2rem;">Reward
+                        sent
+                    </div>
+                    <div style="color: #7e878d;">
+                        <div>Send rewards to the qualified open source contributors.</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="desktopShow" style="flex: 1;"></div>
+    </div>
+</div>
+<div style="z-index: 50;position: relative;display: flex;flex-direction: column;align-items: center;">
+    <div style="width: 100%;height: 0.5px;background-color: rgba(50,55,67,0.2);"></div>
+    <div class="notice" style="margin-top: 8rem;">
+        <div style="display: flex;justify-content: center;">
+            <div onclick="changeTab(this)"
+                 style="padding:0 1.2rem;line-height:2.2rem;border-radius: 1.1rem;margin: 0 1rem;cursor: pointer;font-size: 1.2rem;"
+                 class="selected" id="projects">Open source projects
+            </div>
+            <div onclick="changeTab(this)"
+                 style="padding:0 1.2rem;line-height:2.2rem;border-radius: 1.1rem;margin: 0 1rem;cursor: pointer;font-size: 1.2rem;"
+                 id="contributors">Contributors
+            </div>
+            <div onclick="changeTab(this)"
+                 style="padding:0 1.2rem;line-height:2.2rem;border-radius: 1.1rem;margin: 0 1rem;cursor: pointer;font-size: 1.2rem;"
+                 id="about">About GOSIM
+            </div>
+        </div>
+        <div>
+            <div style="margin-top: 1.5rem;display: block;" id="projects-tab">
+                <notice-component title="My open source project is small. Can I join?"
+                                  value="Of course you can. We welcome all kinds of contributors."/>
+            </div>
+            <div style="margin-top: 1.5rem;display: none;" id="contributors-tab">
+                <notice-component title="How do I become a contributor?"
+                                  value="Click on the 2024 Participants to find your favorite project."/>
+            </div>
+            <div style="margin-top: 1.5rem;display: none;" id="about-tab">
+                <notice-component title="What is GOSIM?" value="GOSIM is Global Open-Source Innovation Meetup."/>
+            </div>
+        </div>
+    </div>
+</div>
+<div style="z-index: 50;position: relative;background-color: rgb(250,250,251);margin-top: 3rem;padding: 3rem 10% 1rem;">
+    <div style="display: flex;justify-content: space-between;">
+        <img style="height: 1.6rem;margin-left: 0.3rem;" src="media/gosim-logo.svg"/>
+        <div style="color: #171A1F;">
+            <div style="font-weight: 700;font-size: 1.2rem;">Events</div>
+            <div>GOSIM EU 2024</div>
+            <div>GOSIM China 2023</div>
+        </div>
+        <div>
+            <div style="font-weight: 700;font-size: 1.2rem;">Resources</div>
+            <div>Rules</div>
+            <div>2024 participants</div>
+            <div>Best parctice</div>
+        </div>
+        <div>
+            <div style="font-weight: 700;font-size: 1.2rem;">Connect</div>
+            <div>X (Twitter)</div>
+            <div>Youtube</div>
+        </div>
+        <div>
+            <div style="font-weight: 700;font-size: 1.2rem;color: #9046ff;">Subscribe to our newsletter</div>
+            <div style="font-size: 0.6rem;">For project announcements and exclusive insights</div>
+            <div style="position: relative;display: flex;align-items: center;margin-top: 0.7rem;">
+                <img style="position: absolute;width: 1rem;left: 0.25rem;" src="media/email.svg"/>
+                <input type="email" style="padding-left:1.3rem;background-color: #EAECF0;border: 0;line-height: 2rem;border-radius: 0.2rem 0 0 0.2rem;"/>
+                <div style="background: #5113D7;color: white;line-height: 2rem;padding: 0 0.5rem;border-radius: 0 0.2rem 0.2rem 0;">Subscribe</div>
+            </div>
+        </div>
+    </div>
+    <div style="display: flex;justify-content: space-between;margin-top: 1.5rem;">
+        <div></div>
+        <div>© 2024 GOSIM</div>
+        <div style="display: flex;">
+            <img style="width: 1rem;padding: 0 0.2rem;" src="media/twitter.svg"/>
+            <img style="width: 1rem;padding: 0 0.2rem;" src="media/facebook.svg"/>
+            <img style="width: 1.2rem;padding: 0 0.2rem;" src="media/linkedin.svg"/>
+            <img style="width: 1.2rem;padding: 0 0.2rem;" src="media/youtube.svg"/>
+        </div>
+    </div>
+</div>
+<script>
+    function changeTab(e) {
+        document.querySelector(".selected").className = "";
+        e.className = "selected";
+        const tabs = document.querySelectorAll('[id*="-tab"]');
+        tabs.forEach(item => {
+            if (item.id === e.id + "-tab") {
+                item.style.display = "block"
+            } else {
+                item.style.display = "none"
+            }
+        })
+    }
+</script>
 </body>
 </html>
